2007-01-08  Wang Xin  <jedy.wang@sun.com>
	
	Fixes #389966
	* gui/e-cal-model-tasks.c: (set_status):
	Do not create the status property if its pointing to None.

2007-01-08  Wang Xin  <jedy.wang@sun.com>

	Fixes #389961
	* gui/e-cal-model.c: (e_cal_model_set_instance_times):
	Check if the item is a event before processing the end time.

2006-12-04  Matthew Barnes  <mbarnes@redhat.com>

	Fixes bug #357970

	* gui/e-alarm-list.c:
	* gui/e-calendar-table.c:
	* gui/e-day-view.c:
	* gui/e-meeting-attendee.c:
	* gui/e-meeting-store.c:
	* gui/e-meeting-time-sel-item.c:
	* gui/e-meeting-time-sel.c:
	* gui/e-week-view-main-item.c:
	* gui/e-week-view.c:
	* gui/gnome-cal.c:
	* gui/goto.c:
	* gui/dialogs/event-page.c:
	* gui/dialogs/task-page.c:
	Don't call deprecated GLib / GDK functions.

2006-11-28  Wang Xin  <jedy.wang@sun.com>

	Fix for bug #380064

	* gui/alarm-notify/alarm-queue.c: (mail_notification): Only
	popup the dialog if calendar backend does not support
	email alarm.

2006-11-21  Harish Krishnaswamy  <kharish@novell.com>

	* gui/gnome-cal.c: (gnome_calendar_destroy):
	Disconnect signal handlers before gcal is destroyed.
	Fixes #208959 (bugzilla.novell.com).

2006-11-20  Carlos Garcia Campos  <carlosgc@gnome.org>
	
	Fixes bug #367183
	* gui/e-cal-model.c: (e_cal_model_set_instance_times): Make end_time a
	valid date for all day events when ical file doesn't provide neither
	DTEND nor DURATION for such events. 

2006-11-07  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/alarm-notify/alarm-notify.c: (list_changed_cb),
	(load_calendars), (cal_opened_cb), (alarm_notify_add_calendar):
	* gui/dialogs/cal-prefs-dialog.c: (alarms_selection_changed):
	Disable alarms for subscribed exchange calendars.
	Fixes #208318 (bugzilla.novell.com)

2006-11-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Committing for Ben Gamari <bgamari@gmail.com>

	* recurrence-page.c: Correct recurrence editor default behavior.
	Fixes #354875
